--- a/tmux.conf
+++ b/tmux.conf
@@ -227,7 +227,9 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 # tmux_conf_theme_status_left=' ❐ #S | '
 tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
 # tmux_conf_theme_status_left=' ❐ #S '
-tmux_conf_theme_status_right='%R , %d %b '
+#tmux_conf_theme_status_right='%R , %d %b '
+tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized}  #{?battery_status, #{battery_status},}#{?battery_percentage, #{battery_percentage},} , %R , %d %b '
+
 
 # status left style
 tmux_conf_theme_status_left_fg=$base_8,$base_8
@@ -296,11 +298,11 @@ tmux_conf_battery_vbar_palette='gradient'
 #tmux_conf_battery_vbar_palette='#d70000,#ff5f00,#5fff00'  # red, orange, green
 
 # symbols used to indicate whether battery is charging or discharging
-tmux_conf_battery_status_charging='↑'       # U+2191
-tmux_conf_battery_status_discharging='↓'    # U+2193
-#tmux_conf_battery_status_charging='⚡ '    # U+26A1
-#tmux_conf_battery_status_charging='🔌 '    # U+1F50C
-#tmux_conf_battery_status_discharging='🔋 ' # U+1F50B
+# tmux_conf_battery_status_charging='↑'       # U+2191
+# tmux_conf_battery_status_discharging='↓'    # U+2193
+tmux_conf_battery_status_charging='⚡ '    # U+26A1
+tmux_conf_battery_status_charging='🔌 '    # U+1F50C
+tmux_conf_battery_status_discharging='🔋 ' # U+1F50B
 
 # clock style (when you hit <prefix> + t)
 # you may want to use %I:%M %p in place of %R in tmux_conf_theme_status_right
