--- a/tmux.conf
+++ b/tmux.conf
@@ -228,7 +228,7 @@ tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see
 tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
 # tmux_conf_theme_status_left=' ❐ #S '
 #tmux_conf_theme_status_right='%R , %d %b '
-tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized}  #{?battery_status, #{battery_status},}#{?battery_percentage, #{battery_percentage},} , %R , %d %b '
+tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized} #(sh ~/dotfiles/starship/uptime.sh)  #{?battery_status, #{battery_status},}#{?battery_percentage, #{battery_percentage},} , %R , %d %b '
 
 
 # status left style
