--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -12,6 +12,9 @@ disabled = true
 [cmd_duration]
 disabled = true
 
+[python]
+format = '[${symbol}${pyenv_prefix}(${version} )(\($virtualenv\))]($style)'
+
 [directory]
 truncation_length = 5
 format = "[$path]($style)[$lock_symbol]($lock_style)"
