--- a/tmux.conf
+++ b/tmux.conf
@@ -4,15 +4,6 @@
 #         Copyright 2012— Gregory Pakosz (@gpakosz).
 
 
-# -- navigation ----------------------------------------------------------------
-
-# if you're running tmux within iTerm2
-#   - and tmux is 1.9 or 1.9a
-#   - and iTerm2 is configured to let option key act as +Esc
-#   - and iTerm2 is configured to send [1;9A -> [1;9D for option + arrow keys
-# then uncomment the following line to make Meta + arrow keys mapping work
-#set -ga terminal-overrides "*:kUP3=\e[1;9A,*:kDN3=\e[1;9B,*:kRIT3=\e[1;9C,*:kLFT3=\e[1;9D"
-
 
 # -- windows & pane creation ---------------------------------------------------
 
@@ -35,280 +26,6 @@ tmux_conf_new_pane_reconnect_ssh=false
 #   - true
 #   - false (default)
 tmux_conf_new_session_prompt=false
-
-
-# -- display -------------------------------------------------------------------
-
-# -- Embark colors ---------------------------------------------------------------
-
-# base_0='#539AFC'  # blue
-# base_1='#91DDFF'  # gray
-# base_2='#65B2FF'  # mid blue
-# base_3='#65B2FF'  # yellow
-# base_4='#434C5E'  # Darkest grey
-# base_5='#4C566A'  # Dark grey
-# base_6='#81A1C1'  # Light blue - main
-# base_7='#2D2B40'  # green blue - right side
-# base_8="#718CA1"  # White(ish)
-# base_9='#100E23'  # green
-# base_10='#D98E48' # Red
-#
-# -- Nord colors ---------------------------------------------------------------
-
-# base_0='#0087d7'  # blue
-# base_1='#444444'  # gray
-# base_2='#81A1C1'  # mid blue
-# base_3='#EBCB8B'  # yellow
-# base_4='#434C5E'  # Darkest grey
-# base_5='#4C566A'  # Dark grey
-# base_6='#81A1C1'  # Light blue - main
-# base_6='#8a8a8a'  # Mid grey - text
-# base_7='#88C0D0'  # green blue - right side
-# base_8="#e4e4e4"  # White(ish)
-# base_9='#8FBCBB'  # green
-# base_10='#d70000' # Red
-
-# -- Solorized Light colors ----------------------------------------------------
-
-# base_0='#d33682'  # magenta
-# base_1='#268bd2'  # blue
-# base_2='#657b83'  # mid grey
-# base_3='#b58900'  # yellow
-# base_4='#002b36'  # Darkest grey
-# base_5='#93a1a1'  # grey
-# base_6='#fdf6e3'  # Sand - text
-# base_7='#2aa198'  # cyan - right side
-# base_8="#e4e4e4"  # White(ish)
-# base_9='#6c71c4'  # green
-# base_10='#dc322f' # Red
-
-# RGB 24-bit colour support (tmux >= 2.2), possible values are:
-#  - true
-#  - false (default)
-# tmux_conf_theme_24b_colour=false
-#
-# # window style
-# tmux_conf_theme_window_fg='default'
-# tmux_conf_theme_window_bg='default'
-#
-# # highlight focused pane (tmux >= 2.1), possible values are:
-# #   - true
-# #   - false (default)
-# tmux_conf_theme_highlight_focused_pane=false
-#
-# # focused pane colours:
-# tmux_conf_theme_focused_pane_fg='default'
-# tmux_conf_theme_focused_pane_bg=$base_0
-#
-# # pane border style, possible values are:
-# #   - thin (default)
-# #   - fat
-# tmux_conf_theme_pane_border_style=thin
-#
-# # pane borders colours:
-# tmux_conf_theme_pane_border=$base_5
-# tmux_conf_theme_pane_active_border=$base_7
-#
-# # pane indicator colours
-# tmux_conf_theme_pane_indicator=$base_6
-# tmux_conf_theme_pane_active_indicator=$base_6
-#
-# # status line style
-# tmux_conf_theme_message_fg=$base_4
-# tmux_conf_theme_message_bg=$base_3
-# tmux_conf_theme_message_attr='bold'
-#
-# # status line command style (<prefix> : Escape)
-# tmux_conf_theme_message_command_fg=$base_3
-# tmux_conf_theme_message_command_bg=$base_4
-# tmux_conf_theme_message_command_attr='bold'
-#
-# # window modes style
-# tmux_conf_theme_mode_fg=$base_4
-# tmux_conf_theme_mode_bg=$base_3
-# tmux_conf_theme_mode_attr='bold'
-#
-# # status line style
-# tmux_conf_theme_status_fg=$base_6
-# tmux_conf_theme_status_bg=$base_9
-# tmux_conf_theme_status_attr='none'
-#
-# # terminal title
-# #   - built-in variables are:
-# #     - #{circled_window_index}
-# #     - #{circled_session_name}
-# #     - #{hostname}
-# #     - #{hostname_ssh}
-# #     - #{username}
-# #     - #{username_ssh}
-# tmux_conf_theme_terminal_title='#h ❐ #S ● #I #W'
-#
-# # window status style
-# #   - built-in variables are:
-# #     - #{circled_window_index}
-# #     - #{circled_session_name}
-# #     - #{hostname}
-# #     - #{hostname_ssh}
-# #     - #{username}
-# #     - #{username_ssh}
-# tmux_conf_theme_window_status_fg=$base_6
-# tmux_conf_theme_window_status_bg=$base_5
-# tmux_conf_theme_window_status_attr='none'
-# tmux_conf_theme_window_status_format='#I #W'
-# tmux_conf_theme_window_status_format='#{circled_window_index} #W'
-# tmux_conf_theme_window_status_format='#I #W#{?window_bell_flag,🔔,}#{?window_zoomed_flag,🔍,}'
-#
-# # window current status style
-# #   - built-in variables are:
-# #     - #{circled_window_index}
-# #     - #{circled_session_name}
-# #     - #{hostname}
-# #     - #{hostname_ssh}
-# #     - #{username}
-# #     - #{username_ssh}
-# tmux_conf_theme_window_status_current_fg=$base_6
-# tmux_conf_theme_window_status_current_bg=$base_1
-# tmux_conf_theme_window_status_current_attr='bold'
-# tmux_conf_theme_window_status_current_format='#I #W'
-# tmux_conf_theme_window_status_current_format='#{circled_window_index} #W'
-# tmux_conf_theme_window_status_current_format='#I #W#{?window_zoomed_flag,🔍,}'
-#
-# # window activity status style
-# tmux_conf_theme_window_status_activity_fg='default'
-# tmux_conf_theme_window_status_activity_bg='default'
-# tmux_conf_theme_window_status_activity_attr='underscore'
-#
-# # window bell status style
-# tmux_conf_theme_window_status_bell_fg=$base_3
-# tmux_conf_theme_window_status_bell_bg='default'
-# tmux_conf_theme_window_status_bell_attr='blink,bold'
-#
-# # window last status style
-# tmux_conf_theme_window_status_last_fg=$base_6
-# tmux_conf_theme_window_status_last_bg='default'
-# tmux_conf_theme_window_status_last_attr='none'
-#
-# # status left/right sections separators
-# # tmux_conf_theme_left_separator_main=''
-# # tmux_conf_theme_left_separator_sub='|'
-# # tmux_conf_theme_right_separator_main=''
-# # tmux_conf_theme_right_separator_sub='|'
-# tmux_conf_theme_left_separator_main='\uE0B0'  # /!\ you don't need to install Powerline
-# tmux_conf_theme_left_separator_sub='\uE0B1'   #   you only need fonts patched with
-# tmux_conf_theme_right_separator_main='\uE0B2' #   Powerline symbols or the standalone
-# tmux_conf_theme_right_separator_sub='\uE0B3'  #   PowerlineSymbols.otf font, see README.md
-#
-# # status left/right content:
-# #   - separate main sections with '|'
-# #   - separate subsections with ','
-# #   - built-in variables are:
-# #     - #{battery_bar}
-# #     - #{battery_hbar}
-# #     - #{battery_percentage}
-# #     - #{battery_status}
-# #     - #{battery_vbar}
-# #     - #{circled_session_name}
-# #     - #{hostname_ssh}
-# #     - #{hostname}
-# #     - #{loadavg}
-# #     - #{pairing}
-# #     - #{prefix}
-# #     - #{root}
-# #     - #{synchronized}
-# #     - #{uptime_y}
-# #     - #{uptime_d} (modulo 365 when #{uptime_y} is used)
-# #     - #{uptime_h}
-# #     - #{uptime_m}
-# #     - #{uptime_s}
-# #     - #{username}
-# #     - #{username_ssh}
-#
-#
-# # tmux_conf_theme_status_left=' ❐ #S | '
-# tmux_conf_theme_status_left=' ❐ #S | #(osascript ~/dotfiles/applescripts/spotify.scpt) '
-# # tmux_conf_theme_status_left=' ❐ #S '
-# #tmux_conf_theme_status_right='%R , %d %b '
-# tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized} #(sh ~/dotfiles/starship/uptime.sh)  #{?battery_status, #{battery_status},}#{?battery_percentage, #{battery_percentage},} , %R , %d %b '
-#
-#
-# # status left style
-# tmux_conf_theme_status_left_fg=$base_8,$base_8
-# tmux_conf_theme_status_left_bg=$base_7,$base_7
-# tmux_conf_theme_status_left_attr='bold,none,none'
-#
-# # status right style
-# tmux_conf_theme_status_right_fg=$base_8,$base_8,$base_4
-# tmux_conf_theme_status_right_bg=$base_7,$base_10,$base_8
-# tmux_conf_theme_status_right_attr='none,none,bold'
-#
-# # pairing indicator
-# tmux_conf_theme_pairing='👓 '          # U+1F453
-# tmux_conf_theme_pairing_fg='none'
-# tmux_conf_theme_pairing_bg='none'
-# tmux_conf_theme_pairing_attr='none'
-#
-# # prefix indicator
-# tmux_conf_theme_prefix='⌨ '            # U+2328
-# tmux_conf_theme_prefix_fg='none'
-# tmux_conf_theme_prefix_bg='none'
-# tmux_conf_theme_prefix_attr='none'
-#
-# # root indicator
-# tmux_conf_theme_root='!'
-# tmux_conf_theme_root_fg='none'
-# tmux_conf_theme_root_bg='none'
-# tmux_conf_theme_root_attr='bold,blink'
-#
-# # synchronized indicator
-# tmux_conf_theme_synchronized='🔒'     # U+1F512
-# tmux_conf_theme_synchronized_fg='none'
-# tmux_conf_theme_synchronized_bg='none'
-# tmux_conf_theme_synchronized_attr='none'
-#
-# # battery bar symbols
-# tmux_conf_battery_bar_symbol_full='◼'
-# tmux_conf_battery_bar_symbol_empty='◻'
-# #tmux_conf_battery_bar_symbol_full='♥'
-# #tmux_conf_battery_bar_symbol_empty='·'
-#
-# # battery bar length (in number of symbols), possible values are:
-# #   - auto
-# #   - a number, e.g. 5
-# tmux_conf_battery_bar_length='auto'
-#
-# # battery bar palette, possible values are:
-# #   - gradient (default)
-# #   - heat
-# #   - 'colour_full_fg,colour_empty_fg,colour_bg'
-# tmux_conf_battery_bar_palette='gradient'
-# #tmux_conf_battery_bar_palette='#d70000,#e4e4e4,#000000'   # red, white, black
-#
-# # battery hbar palette, possible values are:
-# #   - gradient (default)
-# #   - heat
-# #   - 'colour_low,colour_half,colour_full'
-# tmux_conf_battery_hbar_palette='gradient'
-# #tmux_conf_battery_hbar_palette='#d70000,#ff5f00,#5fff00'  # red, orange, green
-#
-# # battery vbar palette, possible values are:
-# #   - gradient (default)
-# #   - heat
-# #   - 'colour_low,colour_half,colour_full'
-# tmux_conf_battery_vbar_palette='gradient'
-# #tmux_conf_battery_vbar_palette='#d70000,#ff5f00,#5fff00'  # red, orange, green
-#
-# # symbols used to indicate whether battery is charging or discharging
-# # tmux_conf_battery_status_charging='↑'       # U+2191
-# # tmux_conf_battery_status_discharging='↓'    # U+2193
-# tmux_conf_battery_status_charging='⚡ '    # U+26A1
-# tmux_conf_battery_status_charging='🔌 '    # U+1F50C
-# tmux_conf_battery_status_discharging='🔋 ' # U+1F50B
-#
-# # clock style (when you hit <prefix> + t)
-# # you may want to use %I:%M %p in place of %R in tmux_conf_theme_status_right
-# tmux_conf_theme_clock_colour=$base_6
-# tmux_conf_theme_clock_style='24'
-
 
 # -- clipboard -----------------------------------------------------------------
 
@@ -335,169 +52,6 @@ set -g default-terminal "xterm-kitty"
 
 # start with mouse mode enabled
 set -g mouse on
-
-# force Vi mode
-#   really you should export VISUAL or EDITOR environment variable, see manual
-#set -g status-keys vi
-#set -g mode-keys vi
-
-# replace C-b by C-a instead of using both prefixes
-# set -gu prefix2
-# unbind C-a
-# unbind C-b
-# set -g prefix C-a
-# bind C-a send-prefix
-
-# move status line to top
-# set -g status-position top
-
-set -g pane-border-status off
-
-# quickly open a new window
-bind N new-window
-
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-# synchronize all panes in a window
-bind y setw synchronize-panes
-
-# pane movement shortcuts
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-bind-key -r i run-shell "tmux neww ~/dotfiles/cht.sh"
-# Resize pane shortcuts
-bind -r H resize-pane -L 10
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 10
-
-#  maximizing and restoring windows
-unbind Up
-bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
-unbind Down
-bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
-
-# set vi mode for copy mode
-setw -g mode-keys vi
-
-# Buffers to/from Mac clipboard, yay tmux book from pragprog
-# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-
-# Move windows
-bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
-bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
-run -b '~/.tmux/plugins/tpm/tpm'
-
-# bind -n C-h run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-
-# Useful tips
-#
-#
-#
-# Reorder windows - use prefix first
-# swap-window -s 3 -t
-# move panes - prefix + ctrl + o
-# https://github.com/gpakosz/.tmux
-# (‑●‑●)> dual licensed under the WTFPL v2 license and the MIT license,
-#         without any warranty.
-#         Copyright 2012— Gregory Pakosz (@gpakosz).
-
-
-# -- navigation ----------------------------------------------------------------
-
-# if you're running tmux within iTerm2
-#   - and tmux is 1.9 or 1.9a
-#   - and iTerm2 is configured to let option key act as +Esc
-#   - and iTerm2 is configured to send [1;9A -> [1;9D for option + arrow keys
-# then uncomment the following line to make Meta + arrow keys mapping work
-#set -ga terminal-overrides "*:kUP3=\e[1;9A,*:kDN3=\e[1;9B,*:kRIT3=\e[1;9C,*:kLFT3=\e[1;9D"
-
-
-# -- windows & pane creation ---------------------------------------------------
-
-# new window retains current path, possible values are:
-#   - true
-#   - false (default)
-tmux_conf_new_window_retain_current_path=false
-
-# new pane retains current path, possible values are:
-#   - true (default)
-#   - false
-tmux_conf_new_pane_retain_current_path=true
-
-# new pane tries to reconnect ssh sessions (experimental), possible values are:
-#   - true
-#   - false (default)
-tmux_conf_new_pane_reconnect_ssh=false
-
-# prompt for session name when creating a new session, possible values are:
-#   - true
-#   - false (default)
-tmux_conf_new_session_prompt=false
-
-
-# -- display -------------------------------------------------------------------
-
-
-
-# -- clipboard -----------------------------------------------------------------
-
-# in copy mode, copying selection also copies to the OS clipboard
-#   - true
-#   - false (default)
-# on macOS, this requires installing reattach-to-user-namespace, see README.md
-# on Linux, this requires xsel or xclip
-tmux_conf_copy_to_os_clipboard=false
-
-
-# -- user customizations -------------------------------------------------------
-# this is the place to override or undo settings
-set -g default-terminal "xterm-kitty"
-# set -ga terminal-overrides ",*:Smulx=\E[4::%p1%dm"
-
-# Before using xterm-kitty
-# set -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",xterm-256color:Tc"
-# set -ga terminal-overrides ",screen-256color:Tc"
-
-# increase history size
-#set -g history-limit 10000
-
-# start with mouse mode enabled
-set -g mouse on
-
-# force Vi mode
-#   really you should export VISUAL or EDITOR environment variable, see manual
-#set -g status-keys vi
-#set -g mode-keys vi
-
-# replace C-b by C-a instead of using both prefixes
-# set -gu prefix2
-# unbind C-a
-# unbind C-b
-# set -g prefix C-a
-# bind C-a send-prefix
-
-# move status line to top
-# set -g status-position top
 
 set -g pane-border-status off
 
@@ -541,23 +95,6 @@ setw -g mode-keys vi
 # Set window name
 set -g @tmux-nerd-font-window-name-show-name true
 
-# Buffers to/from Mac clipboard, yay tmux book from pragprog
-# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-bind-key -n 'C-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
-
 bind-key -T copy-mode-vi 'C-h' select-pane -L
 bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
@@ -565,9 +102,10 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 bind-key -T copy-mode-vi 'C-Space' select-pane -t:.+
 
-# Move windows
-bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
-bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -578,11 +116,6 @@ set -g @plugin 'jim-at-jibba/nord-tmux'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
-# bind -n C-h run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-
 # Useful tips
 #
 #
@@ -591,17 +124,3 @@ run -b '~/.tmux/plugins/tpm/tpm'
 # swap-window -s 3 -t
 # move panes - prefix + ctrl + o
 #!/usr/bin/env bash
-
-# TokyoNight colors for Tmux
-base_0='#1b1e28'  # blue
-base_1='#1b1e28'  # gray
-base_2='#1b1e28'  # mid blue
-base_3='#89ddff'  # yellow
-base_4='#1b1e28'  # Darkest grey
-base_5='#5de4c7'  # Dark grey
-base_6='#5de4c7'  # Light blue - main
-base_7='#5de4c7'  # green blue - right side
-base_8="#1b1e28"  # White(ish)
-base_9='#1b1e28'  # green
-base_10='#1b1e28' # Red
-
