--- a/tmux.conf
+++ b/tmux.conf
@@ -85,7 +85,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind-key -T prefix t set-option -g status
+# bind-key -T prefix t set-option -g status
 # open lazygit in a new window with prefix+g
 bind-key g new-window -n lazygit -c "#{pane_current_path}" "lazygit"
 
@@ -100,18 +100,36 @@ set -g @fzf-url-history-limit '2000'
 # set -g @pomodoro_cancel ''    # Cancel a Pomodoro with tmux-prefix key + P
 set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
 set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
-set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
+set -g @pomodoro_start 't'     # Start a Pomodoro with tmux-prefix + p
 set -g @pomodoro_mins 50                       # The duration of the Pomodoro
 set -g @pomodoro_break_mins 10                  # The duration of the break after the Pomodoro completes
 set -g @pomodoro_intervals 4                   # The number of intervals before a longer break is started
 set -g @pomodoro_long_break_mins 25            # The duration of the long break
 set -g @pomodoro_repeat 'off'                  # Automatically repeat the Pomodoros?
 
+set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+
+set -g @catppuccin_window_default_fill "number"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'jim-at-jibba/nord-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'wfxr/tmux-fzf-url'
@@ -120,13 +138,3 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 
 run '~/.tmux/plugins/tpm/tpm'
 
-# Dark theme
-#+--- Bars ---+
-set -g status-right-length 120
-set -g status-left "#[fg=blue,bg=blue,nobold,noitalics,nounderscore] #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
-set -g status-right "#{prefix_highlight}#[fg=blue,bg=black,nobold,noitalics,nounderscore]#[fg=black,bg=blue] #{pomodoro_status} #(osascript ~/dotfiles/applescripts/spotify.scpt)"
-
-#+--- Windows ---+
-set -g window-status-format "#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=cyan,bg=brightblack]#I #[fg=black,bg=brightblack,nobold,noitalics,nounderscore] #[fg=white,bg=brightblack]#W #F #[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-current-format "#[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] #[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
-set -g window-status-separator ""
