--- a/tmux/base.conf
+++ b/tmux/base.conf
@@ -85,7 +85,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind-key -T prefix t set-option -g status
+# bind-key -T prefix t set-option -g status
 # open lazygit in a new window with prefix+g
 bind-key g new-window -n lazygit -c "#{pane_current_path}" "lazygit"
 
@@ -97,23 +97,31 @@ bind C-e display-popup -E "\
 
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
-# set -g @pomodoro_cancel ''    # Cancel a Pomodoro with tmux-prefix key + P
-set -g @pomodoro_complete ' ✅' # The formatted output when the pomodoro is finished
-set -g @pomodoro_on ' 🍅'       # The formatted output when the pomodoro is running
-set -g @pomodoro_start 'P'     # Start a Pomodoro with tmux-prefix + p
-set -g @pomodoro_mins 50                       # The duration of the Pomodoro
-set -g @pomodoro_break_mins 10                  # The duration of the break after the Pomodoro completes
-set -g @pomodoro_intervals 4                   # The number of intervals before a longer break is started
-set -g @pomodoro_long_break_mins 25            # The duration of the long break
-set -g @pomodoro_repeat 'off'                  # Automatically repeat the Pomodoros?
 
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator "  █"
+
+set -g @catppuccin_window_default_fill "number"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#{pane_current_path}"
+
+set -g @catppuccin_status_modules_right "application session date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-# set -g @plugin 'jim-at-jibba/nord-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 
