--- a/tmux/base.conf
+++ b/tmux/base.conf
@@ -1,54 +1,17 @@
+#################################### OPTIONS ####################################
 set -g default-terminal "xterm-kitty"
-
-# THEME START
-#+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_fg black
-set -g @prefix_highlight_bg brightcyan
-
-#+---------+
-#+ Options +
-#+---------+
 set -g status-interval 1
 set -g status on
-
-#+--------+
-#+ Status +
-#+--------+
-#+--- Layout ---+
-set -g status-justify left
-
-#+--- Colors ---+
-set -g status-style bg=black,fg=white
-
-#+-------+
-#+ Panes +
-#+-------+
+set -g status-justify centre
+set -g status-left-length 90
+set -g status-right-length 90
 set -g pane-border-style bg=default,fg=brightblack
 set -g pane-active-border-style bg=default,fg=blue
 set -g display-panes-colour black
 set -g display-panes-active-colour brightblack
-
-#+------------+
-#+ Clock Mode +
-#+------------+
 setw -g clock-mode-colour cyan
-
-#+----------+
-#+ Messages +
-#+---------+
 set -g message-style bg=brightblack,fg=cyan
 set -g message-command-style bg=brightblack,fg=cyan
-
-#+--- tmux-prefix-highlight ---+
-set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
-set -g @prefix_highlight_output_suffix ""
-set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
-
-# THEME END
-
-# reload configuration
-bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
-
 set -g mouse on
 
 # Start windows and panes at 1, not 0
@@ -58,6 +21,79 @@ set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 # Set keys vim
 setw -g mode-keys vi
+
+
+#################################### PLUGINS SET UP ###################################
+
+mode_separator=""
+set -g @mode_indicator_empty_prompt " TMUX #[default]#[fg=cyan]$mode_separator"
+set -g @mode_indicator_empty_mode_style fg=black,bg=cyan,bold
+set -g @mode_indicator_prefix_prompt " TMUX #[default]#[fg=blue]$mode_separator"
+set -g @mode_indicator_prefix_mode_style fg=black,bg=blue,bold
+set -g @mode_indicator_copy_prompt " COPY #[default]#[fg=green]$mode_separator"
+set -g @mode_indicator_copy_mode_style fg=blue,bg=green,bold
+set -g @mode_indicator_sync_prompt " SYNC #[default]#[fg=red]$mode_separator"
+set -g @mode_indicator_sync_mode_style fg=cyan,bg=red,bold
+
+# tmux cpu
+set -g @cpu_percentage_format "%3.0f%%"
+
+# tmux-online-status
+set -g @route_to_ping "vultr.net"   # Use a UK based site to ping
+set -g @online_icon "#[fg=gray]"
+set -g @offline_icon "#[fg=red]"
+
+# tmux-pomodoro
+set -g @pomodoro_mins 50
+set -g @pomodoro_break_mins 10
+set -g @pomodoro_intervals 4
+set -g @pomodoro_long_break_mins 25
+set -g @pomodoro_repeat 'off'
+set -g @pomodoro_on "  #[fg=red] "
+set -g @pomodoro_complete "  #[fg=green] "
+set -g @pomodoro_pause "  #[fg=yellow] "
+set -g @pomodoro_prompt_break "  #[fg=green] ?"
+set -g @pomodoro_prompt_pomodoro "  #[fg=red] ?"
+set -g @pomodoro_interval_display "#[fg=gray]|#[fg=italics]%s"
+
+# tmux-battery
+set -g @batt_icon_charge_tier8 ""
+set -g @batt_icon_charge_tier7 ""
+set -g @batt_icon_charge_tier6 ""
+set -g @batt_icon_charge_tier5 ""
+set -g @batt_icon_charge_tier4 ""
+set -g @batt_icon_charge_tier3 ""
+set -g @batt_icon_charge_tier2 ""
+set -g @batt_icon_charge_tier1 ""
+
+set -g @batt_icon_status_charged " "
+set -g @batt_icon_status_charging "  "
+set -g @batt_icon_status_discharging " "
+set -g @batt_icon_status_attached " "
+set -g @batt_icon_status_unknown " "
+
+set -g @batt_remain_short true
+
+#################################### THEME ###################################
+
+#+--- tmux-prefix-highlight ---+
+set -g status-style bg=black,fg=white
+set -g @prefix_highlight_fg black
+set -g @prefix_highlight_bg brightcyan
+set -g @prefix_highlight_output_prefix "#[fg=brightcyan]#[bg=black]#[nobold]#[noitalics]#[nounderscore]#[bg=brightcyan]#[fg=black]"
+set -g @prefix_highlight_output_suffix ""
+set -g @prefix_highlight_copy_mode_attr "fg=brightcyan,bg=black,bold"
+# Dark theme
+#+--- Bars ---+
+set -g status-left "#{tmux_mode_indicator} #{online_status}  #[fg=blue]%R#{pomodoro_status}"
+set -g status-right "#[fg=cyan]#{battery_icon_charge}  #{battery_percentage}#{battery_icon_status}#{battery_remain}  CPU:#{cpu_percentage} "
+setw -g window-status-format "#[fg=blue,italics] #I:#[noitalics]#W"
+setw -g window-status-current-format "#[fg=cyan,italics]#I: #[fg=cyan,noitalics,bold]#W"
+
+#################################### KEYBINDS ###################################
+
+# reload configuration
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 unbind C-b
 set -g prefix C-a
@@ -98,32 +134,18 @@ bind C-e display-popup -E "\
 set -g @fzf-url-fzf-options '-p 60%,30% --prompt="   " --border-label=" Open URL "'
 set -g @fzf-url-history-limit '2000'
 
-set -g @catppuccin_flavour 'frappe' # or frappe, macchiato, mocha
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-
-set -g @catppuccin_window_default_fill "number"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#{pane_current_path}"
-
-set -g @catppuccin_status_modules_right "application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-
+#################################### PLUGINS ###################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'    # Display current tmux mode
+set -g @plugin 'tmux-plugins/tmux-online-status'    # Are we connected to the internet?!
 
 
 run '~/.tmux/plugins/tpm/tpm'
